--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,17 @@ pydantic
 xmltodict
 typer
 pytest
-langgraph 
+langgraph
 langchain-core
 fastapi
 uvicorn[standard]
 python-multipart
 streamlit
 requests
-
-
-
+PyMuPDF
+pytesseract
+pillow
+langchain-openai
+langchain-google-genai
+langchain-groq
+python-dotenv
